fix: use Collections.emptyMap() for Java 8 compatibility
Co-authored-by: saig0 <4305769+saig0@users.noreply.github.com>